--- a/gh-pages/404.html
+++ b/gh-pages/404.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>~j~ru~dict!^^</title>
+    <title>j~dict!^w^</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <script type="module" crossorigin src="./assets/main-CNz9C7Yr.js"></script>
+  <script type="module" crossorigin src="./assets/main-JtOKvQA-.js"></script>
   <link rel="stylesheet" crossorigin href="./assets/main-BoU2LSMm.css">
 </head>
 
